--- a/.github/workflows/chirpreportapi.yml
+++ b/.github/workflows/chirpreportapi.yml
@@ -28,7 +28,7 @@ jobs:
 #      run: |
 #        pip install pytest
 #        pytest
-    - name: copy file via ssh password
+    - name: Copy files to new folder
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
@@ -37,7 +37,7 @@ jobs:
         passphrase: ${{ secrets.SERVER_SSH_PASSCODE }}
         source: "*"
         target: ${{ secrets.REMOTE_TARGET_NEW }}
-    - name: ssh proxy command
+    - name: Rename new folder to active
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
@@ -45,5 +45,6 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         passphrase: ${{ secrets.SERVER_SSH_PASSCODE }}
         script: |
-          cd ${{ secrets.REMOTE_TARGET_CURRENT }}
-          pwd
+          rm -r ${{ secrets.REMOTE_TARGET_OLD }}
+          mv ${{ secrets.REMOTE_TARGET_CURRENT }} ${{ secrets.REMOTE_TARGET_OLD }}
+          mv ${{ secrets.REMOTE_TARGET_NEW }} ${{ secrets.REMOTE_TARGET_CURRENT }}
