--- a/.github/workflows/chirpreportapi.yml
+++ b/.github/workflows/chirpreportapi.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         python3 -m venv venv
         venv/bin/activate
-        pip install -r requirements.txt
+        pip install --no-cache-dir -r requirements.txt
 #    - name: Lint with flake8
 #      run: |
 #        pip install flake8
